@@ -1,7 +1,10 @@
 dclone package version history
 
 Version 1.3-3, May 13, 2011
-    *
+    * jags.parfit help notes that there is no update method
+      for parallel mcmc.list objects.
+    * snowWrapper got cleanup=TRUE argument to remove
+      data after evaluating main function.
 
 Version 1.3-2, March 2, 2011
     * Partial argument match fixed (NOTE from R CMD CHECK).
